// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chart calcs 1`] = `
Object {
  "axis": Array [
    Array [
      0,
      2,
    ],
    Array [
      3.2,
    ],
  ],
  "bounds": Array [
    Array [
      0,
      2,
    ],
    Array [
      0.8,
      3.2,
    ],
  ],
  "dimensions": Array [
    2,
    2.4000000000000004,
  ],
  "pad": "large",
  "thickness": "xlarge",
}
`;

exports[`Chart cap renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: block;
  max-width: 100%;
  overflow: visible;
}

<div
  className="c0"
>
  <svg
    className="c1"
    height={192}
    preserveAspectRatio="none"
    viewBox="-12 -12 408 216"
    width={384}
  >
    <g
      fill="none"
      stroke="#6FFFB0"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth={24}
    >
      <g
        fill="none"
      >
        <title>
          sixty
        </title>
        <path
          d="M 384,192 L 384,0"
        />
      </g>
    </g>
  </svg>
  <svg
    className="c1"
    height={192}
    preserveAspectRatio="none"
    viewBox="-12 -12 408 216"
    width={384}
  >
    <g
      fill="none"
      stroke="#6FFFB0"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth={24}
    >
      <g
        fill="none"
      >
        <path
          d="M 384,0 L 0,192"
        />
      </g>
    </g>
  </svg>
  <svg
    className="c1"
    height={192}
    preserveAspectRatio="none"
    viewBox="-12 -12 408 216"
    width={384}
  >
    <g
      fill="#6FFFB0"
      stroke="#6FFFB0"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth={24}
    >
      <g>
        <path
          d="M 384,0 L 0,192 L 0,192 L 384,192 Z"
        />
      </g>
    </g>
  </svg>
  <svg
    className="c1"
    height={192}
    preserveAspectRatio="none"
    viewBox="-12 -12 408 216"
    width={384}
  >
    <g
      fill="#6FFFB0"
      stroke="none"
      strokeLinecap="round"
      strokeLinejoin="round"
    >
      <g
        stroke="none"
      >
        <title>
          sixty
        </title>
        <circle
          cx={384}
          cy={0}
          r={12}
        />
      </g>
      <g
        stroke="none"
      >
        <title>
          zero
        </title>
        <circle
          cx={0}
          cy={192}
          r={12}
        />
      </g>
    </g>
  </svg>
</div>
`;

exports[`Chart color renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: block;
  max-width: 100%;
  overflow: visible;
}

<div
  className="c0"
>
  <svg
    className="c1"
    height={192}
    preserveAspectRatio="none"
    viewBox="-12 -12 408 216"
    width={384}
  >
    <g
      fill="none"
      stroke="#7D4CDB"
      strokeLinecap="butt"
      strokeLinejoin="miter"
      strokeWidth={24}
    >
      <g
        fill="none"
      >
        <title>
          sixty
        </title>
        <path
          d="M 384,192 L 384,0"
        />
      </g>
    </g>
  </svg>
  <svg
    className="c1"
    height={192}
    preserveAspectRatio="none"
    viewBox="-12 -12 408 216"
    width={384}
  >
    <g
      fill="none"
      opacity={0.8}
      stroke="#7D4CDB"
      strokeLinecap="butt"
      strokeLinejoin="miter"
      strokeWidth={24}
    >
      <g
        fill="none"
      >
        <title>
          sixty
        </title>
        <path
          d="M 384,192 L 384,0"
        />
      </g>
    </g>
  </svg>
  <svg
    className="c1"
    height={192}
    preserveAspectRatio="none"
    viewBox="-12 -12 408 216"
    width={384}
  >
    <defs>
      <linearGradient
        id="undefined-gradient"
        x1={0}
        x2={0}
        y1={0}
        y2={1}
      >
        <stop
          offset={0}
          stopColor="rgba(0,0,0,0.33)"
        />
        <stop
          offset={1}
          stopColor="#7D4CDB"
        />
      </linearGradient>
      <mask
        id="undefined-mask"
      >
        <g
          fill="none"
          stroke="#ffffff"
          strokeLinecap="butt"
          strokeLinejoin="miter"
          strokeWidth={24}
        >
          <g
            fill="none"
          >
            <title>
              sixty
            </title>
            <path
              d="M 384,192 L 384,0"
            />
          </g>
        </g>
      </mask>
    </defs>
    <rect
      fill="url(#undefined-gradient)"
      height={216}
      mask="url(#undefined-mask)"
      width={408}
      x={-12}
      y={-12}
    />
  </svg>
</div>
`;

exports[`Chart dash renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: block;
  max-width: 100%;
  overflow: visible;
}

<div
  className="c0"
>
  <svg
    className="c1"
    height={192}
    preserveAspectRatio="none"
    viewBox="-12 -12 408 216"
    width={384}
  >
    <g
      fill="none"
      stroke="#6FFFB0"
      strokeLinecap="butt"
      strokeLinejoin="miter"
      strokeWidth={24}
    >
      <g
        fill="none"
      >
        <title>
          sixty
        </title>
        <path
          d="M 384,192 L 384,0"
          strokeDasharray="48 12"
        />
      </g>
    </g>
  </svg>
</div>
`;

exports[`Chart gap renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 768px;
}

.c2 {
  display: block;
  max-width: 100%;
  overflow: visible;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <svg
      className="c2"
      height={192}
      preserveAspectRatio="none"
      viewBox="-12 -12 84 216"
      width={60}
    >
      <g
        fill="none"
        stroke="#6FFFB0"
        strokeLinecap="butt"
        strokeLinejoin="miter"
        strokeWidth={24}
      >
        <g
          fill="none"
        >
          <title>
            sixty
          </title>
          <path
            d="M 60,192 L 60,0"
          />
        </g>
      </g>
    </svg>
    <svg
      className="c2"
      height={192}
      preserveAspectRatio="none"
      viewBox="-12 -12 96 216"
      width={72}
    >
      <g
        fill="none"
        stroke="#6FFFB0"
        strokeLinecap="butt"
        strokeLinejoin="miter"
        strokeWidth={24}
      >
        <g
          fill="none"
        >
          <title>
            sixty
          </title>
          <path
            d="M 72,192 L 72,0"
          />
        </g>
      </g>
    </svg>
    <svg
      className="c2"
      height={192}
      preserveAspectRatio="none"
      viewBox="-12 -12 120 216"
      width={96}
    >
      <g
        fill="none"
        stroke="#6FFFB0"
        strokeLinecap="butt"
        strokeLinejoin="miter"
        strokeWidth={24}
      >
        <g
          fill="none"
        >
          <title>
            sixty
          </title>
          <path
            d="M 96,192 L 96,0"
          />
        </g>
      </g>
    </svg>
  </div>
</div>
`;

exports[`Chart renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: block;
  max-width: 100%;
  overflow: visible;
}

<div
  className="c0"
>
  <svg
    className="c1"
    height={192}
    preserveAspectRatio="none"
    viewBox="-12 -12 408 216"
    width={384}
  >
    <g
      fill="none"
      stroke="#6FFFB0"
      strokeLinecap="butt"
      strokeLinejoin="miter"
      strokeWidth={24}
    >
      <g
        fill="none"
      >
        <title>
          sixty
        </title>
        <path
          d="M 384,192 L 384,0"
        />
      </g>
    </g>
  </svg>
</div>
`;

exports[`Chart size renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 768px;
}

.c1 {
  display: block;
  max-width: 100%;
  overflow: visible;
}

<div
  className="c0"
>
  <svg
    className="c1"
    height={96}
    preserveAspectRatio="none"
    viewBox="-12 -12 120 120"
    width={96}
  >
    <g
      fill="none"
      stroke="#6FFFB0"
      strokeLinecap="butt"
      strokeLinejoin="miter"
      strokeWidth={24}
    >
      <g
        fill="none"
      >
        <title>
          sixty
        </title>
        <path
          d="M 96,96 L 96,0"
        />
      </g>
    </g>
  </svg>
  <svg
    className="c1"
    height={192}
    preserveAspectRatio="none"
    viewBox="-12 -12 216 216"
    width={192}
  >
    <g
      fill="none"
      stroke="#6FFFB0"
      strokeLinecap="butt"
      strokeLinejoin="miter"
      strokeWidth={24}
    >
      <g
        fill="none"
      >
        <title>
          sixty
        </title>
        <path
          d="M 192,192 L 192,0"
        />
      </g>
    </g>
  </svg>
  <svg
    className="c1"
    height={384}
    preserveAspectRatio="none"
    viewBox="-12 -12 408 408"
    width={384}
  >
    <g
      fill="none"
      stroke="#6FFFB0"
      strokeLinecap="butt"
      strokeLinejoin="miter"
      strokeWidth={24}
    >
      <g
        fill="none"
      >
        <title>
          sixty
        </title>
        <path
          d="M 384,384 L 384,0"
        />
      </g>
    </g>
  </svg>
  <svg
    className="c1"
    height={768}
    preserveAspectRatio="none"
    viewBox="-12 -12 792 792"
    width={768}
  >
    <g
      fill="none"
      stroke="#6FFFB0"
      strokeLinecap="butt"
      strokeLinejoin="miter"
      strokeWidth={24}
    >
      <g
        fill="none"
      >
        <title>
          sixty
        </title>
        <path
          d="M 768,768 L 768,0"
        />
      </g>
    </g>
  </svg>
  <svg
    className="c1"
    height={1152}
    preserveAspectRatio="none"
    viewBox="-12 -12 1176 1176"
    width={1152}
  >
    <g
      fill="none"
      stroke="#6FFFB0"
      strokeLinecap="butt"
      strokeLinejoin="miter"
      strokeWidth={24}
    >
      <g
        fill="none"
      >
        <title>
          sixty
        </title>
        <path
          d="M 1152,1152 L 1152,0"
        />
      </g>
    </g>
  </svg>
  <div
    className="c2"
  >
    <svg
      className="c1"
      height={192}
      preserveAspectRatio="none"
      viewBox="-12 -12 24 216"
      width={0}
    >
      <g
        fill="none"
        stroke="#6FFFB0"
        strokeLinecap="butt"
        strokeLinejoin="miter"
        strokeWidth={24}
      >
        <g
          fill="none"
        >
          <title>
            sixty
          </title>
          <path
            d="M 0,192 L 0,0"
          />
        </g>
      </g>
    </svg>
    <svg
      className="c1"
      height={192}
      preserveAspectRatio="none"
      viewBox="-12 -12 96 216"
      width={72}
    >
      <g
        fill="none"
        stroke="#6FFFB0"
        strokeLinecap="butt"
        strokeLinejoin="miter"
        strokeWidth={24}
      >
        <g
          fill="none"
        >
          <title>
            sixty
          </title>
          <path
            d="M 72,192 L 72,0"
          />
        </g>
      </g>
    </svg>
  </div>
</div>
`;

exports[`Chart thickness renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: block;
  max-width: 100%;
  overflow: visible;
}

<div
  className="c0"
>
  <svg
    className="c1"
    height={192}
    preserveAspectRatio="none"
    viewBox="-3 -3 390 198"
    width={384}
  >
    <g
      fill="none"
      stroke="#6FFFB0"
      strokeLinecap="butt"
      strokeLinejoin="miter"
      strokeWidth={6}
    >
      <g
        fill="none"
      >
        <title>
          sixty
        </title>
        <path
          d="M 384,192 L 384,0"
        />
      </g>
    </g>
  </svg>
  <svg
    className="c1"
    height={192}
    preserveAspectRatio="none"
    viewBox="-6 -6 396 204"
    width={384}
  >
    <g
      fill="none"
      stroke="#6FFFB0"
      strokeLinecap="butt"
      strokeLinejoin="miter"
      strokeWidth={12}
    >
      <g
        fill="none"
      >
        <title>
          sixty
        </title>
        <path
          d="M 384,192 L 384,0"
        />
      </g>
    </g>
  </svg>
  <svg
    className="c1"
    height={192}
    preserveAspectRatio="none"
    viewBox="-12 -12 408 216"
    width={384}
  >
    <g
      fill="none"
      stroke="#6FFFB0"
      strokeLinecap="butt"
      strokeLinejoin="miter"
      strokeWidth={24}
    >
      <g
        fill="none"
      >
        <title>
          sixty
        </title>
        <path
          d="M 384,192 L 384,0"
        />
      </g>
    </g>
  </svg>
  <svg
    className="c1"
    height={192}
    preserveAspectRatio="none"
    viewBox="-24 -24 432 240"
    width={384}
  >
    <g
      fill="none"
      stroke="#6FFFB0"
      strokeLinecap="butt"
      strokeLinejoin="miter"
      strokeWidth={48}
    >
      <g
        fill="none"
      >
        <title>
          sixty
        </title>
        <path
          d="M 384,192 L 384,0"
        />
      </g>
    </g>
  </svg>
  <svg
    className="c1"
    height={192}
    preserveAspectRatio="none"
    viewBox="-48 -48 480 288"
    width={384}
  >
    <g
      fill="none"
      stroke="#6FFFB0"
      strokeLinecap="butt"
      strokeLinejoin="miter"
      strokeWidth={96}
    >
      <g
        fill="none"
      >
        <title>
          sixty
        </title>
        <path
          d="M 384,192 L 384,0"
        />
      </g>
    </g>
  </svg>
</div>
`;

exports[`Chart type renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: block;
  max-width: 100%;
  overflow: visible;
}

<div
  className="c0"
>
  <svg
    className="c1"
    height={192}
    preserveAspectRatio="none"
    viewBox="-12 -12 408 216"
    width={384}
  >
    <g
      fill="none"
      stroke="#6FFFB0"
      strokeLinecap="butt"
      strokeLinejoin="miter"
      strokeWidth={24}
    >
      <g
        fill="none"
      >
        <title>
          sixty
        </title>
        <path
          d="M 384,192 L 384,0"
        />
      </g>
    </g>
  </svg>
  <svg
    className="c1"
    height={192}
    preserveAspectRatio="none"
    viewBox="-12 -12 408 216"
    width={384}
  >
    <g
      fill="none"
      stroke="#6FFFB0"
      strokeLinecap="butt"
      strokeLinejoin="miter"
      strokeWidth={24}
    >
      <g
        fill="none"
      >
        <path
          d="M 384,0 L 0,192"
        />
      </g>
    </g>
  </svg>
  <svg
    className="c1"
    height={192}
    preserveAspectRatio="none"
    viewBox="-12 -12 408 216"
    width={384}
  >
    <g
      fill="#6FFFB0"
      stroke="#6FFFB0"
      strokeLinecap="butt"
      strokeLinejoin="miter"
      strokeWidth={24}
    >
      <g>
        <path
          d="M 384,0 L 0,192 L 0,192 L 384,192 Z"
        />
      </g>
    </g>
  </svg>
  <svg
    className="c1"
    height={192}
    preserveAspectRatio="none"
    viewBox="-12 -12 408 216"
    width={384}
  >
    <g
      fill="#6FFFB0"
      stroke="none"
      strokeLinecap="butt"
      strokeLinejoin="miter"
    >
      <g
        stroke="none"
      >
        <title>
          sixty
        </title>
        <rect
          height={24}
          width={24}
          x={372}
          y={-12}
        />
      </g>
      <g
        stroke="none"
      >
        <title>
          zero
        </title>
        <rect
          height={24}
          width={24}
          x={-12}
          y={180}
        />
      </g>
    </g>
  </svg>
</div>
`;
